cabal-version:      2.4
name:               minesweeper-bee
version:            0.1.0.0
synopsis:           minesweeper

-- A longer description of the package.
-- description:
homepage:           https://github.com/Pyrotelekinetic/minesweeper

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Carter Ison
maintainer:         carter@isons.org

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files:
    README.md
    CHANGELOG.md

executable minesweeper-bee
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options:
        -Wno-tabs
        -threaded
    build-depends:
        base ^>=4.14.3.0,
        mtl,
        random,
        array,
        extra,
        vty
    hs-source-dirs:   app
    default-language: Haskell2010
